--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    hi bro
+    <p>Hi bro</p>
+    <p>Hi bro</p>
 </body>
 </html>
